Hide delete button if editing