@@ -2,12 +2,15 @@ package cloud.codestore.client.ui.snippet.footer;
 
 import cloud.codestore.client.Permission;
 import cloud.codestore.client.ui.AbstractUiTest;
+import javafx.beans.property.BooleanProperty;
+import javafx.beans.property.SimpleBooleanProperty;
 import javafx.scene.control.Button;
 import javafx.stage.Stage;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.junit.jupiter.MockitoExtension;
 import org.testfx.api.FxRobot;
 import org.testfx.framework.junit5.ApplicationExtension;
 import org.testfx.framework.junit5.Start;
@@ -19,39 +22,67 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 
-@ExtendWith({MockitoExtension.class, ApplicationExtension.class})
-@DisplayName("The snippet footer")
-class FooterTest extends AbstractUiTest {
+@DisplayName("The snippet footer's")
+class FooterTest {
+    private BooleanProperty editingProperty = new SimpleBooleanProperty(false);
     private Footer controller = new Footer();
 
-    @Start
-    private void start(Stage stage) throws Exception {
-        start(stage, "footer.fxml", controller);
+    @BeforeEach
+    void setUp() {
+        controller.bindEditing(editingProperty);
     }
 
-    @Test
-    @DisplayName("shows the delete-button if permitted")
-    void showDeleteButton(FxRobot robot) {
-        var button = deleteButton(robot);
-        button.setPrefSize(30, 30);
+    @Nested
+    @ExtendWith(ApplicationExtension.class)
+    @DisplayName("delete button")
+    class DeleteButtonTest extends AbstractUiTest {
+        private FxRobot robot;
+        private Button button;
 
-        controller.setPermissions(Set.of(Permission.DELETE));
-        assertThat(button.isVisible()).isTrue();
+        @Start
+        private void start(Stage stage) throws Exception {
+            start(stage, "footer.fxml", controller);
+            button = deleteButton();
+        }
 
-        controller.setPermissions(Collections.emptySet());
-        assertThat(button.isVisible()).isFalse();
+        @Test
+        @DisplayName("is visible if deletion is permitted")
+        void visibleIfPermitted() {
+            editingProperty.set(false);
+            controller.setPermissions(Set.of(Permission.DELETE));
+            assertThat(button.isVisible()).isTrue();
+
+            controller.setPermissions(Collections.emptySet());
+            assertThat(button.isVisible()).isFalse();
+        }
+
+        @Test
+        @DisplayName("is visible if not editing")
+        void visibleIfNotEditing() {
+            editingProperty.set(false);
+            assertThat(button.isVisible()).isTrue();
+
+            editingProperty.set(true);
+            assertThat(button.isVisible()).isFalse();
+        }
+
+        @Test
+        @DisplayName("calls the corresponding callback when clicked")
+        void deleteCallback() {
+            verifyCallbackCalled(button, robot);
+        }
+
+        private Button deleteButton() {
+            var deleteButton = robot.lookup("#deleteButton").queryButton();
+            deleteButton.setPrefSize(30, 30);
+            return deleteButton;
+        }
     }
 
-    @Test
-    @DisplayName("calls the callback of the delete-button")
-    void deleteCallback(FxRobot robot) {
+    private void verifyCallbackCalled(Button button, FxRobot robot) {
         var callback = mock(Runnable.class);
         controller.onDelete(callback);
-        robot.clickOn(deleteButton(robot));
+        robot.clickOn(button);
         verify(callback).run();
-    }
-
-    private Button deleteButton(FxRobot robot) {
-        return robot.lookup("#deleteButton").queryButton();
     }
 }
